logs/Slang/generated/yosys/svinterfaces_svinterface_at_top.sv.log
name: svinterfaces_svinterface_at_top
description: Tests imported from yosys
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/svinterfaces/svinterface_at_top.sv
should_fail: 0
tags: yosys
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/svinterfaces/svinterface_at_top.sv:109:47: error: use of undeclared identifier 'u_MyInterfaceFromTop'
  assign u_MyInterfaceFromTopDown.mysig_out = u_MyInterfaceFromTop.setting ? 10 :  20;
                                              ^~~~~~~~~~~~~~~~~~~~
